# ======================================================================================
# Copyright and other protections apply. Please see the accompanying LICENSE file for
# rights and restrictions governing use of this software. All rights not expressly
# waived or licensed are reserved. If that file is missing or appears to be modified
# from its original, then please contact the author before viewing or using this
# software in any capacity.
# ======================================================================================

[project]
name = "anydyce"
dynamic = ["version"]
description = "Interactivity tools for dyce"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Matt Bogosian", email = "matt@bogosian.net"}]
requires-python = ">=3.11"
dependencies = [
    "dyce~=0.7.0rc6",
    "lark>=1.3.1",
    "typing_extensions>=4.5; python_version < '3.13'",  # back-port of deprecated decorator
]
classifiers = [
  "Topic :: Education",
  "Topic :: Games/Entertainment",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://posita.github.io/anydyce/"
"Source Repository" = "https://github.com/posita/anydyce/"

[project.optional-dependencies]
jupyter = ["dyce[viz]", "ipywidgets"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["anydyce", "anydyce.anydice"]
package-data = {"anydyce" = ["py.typed"]}

[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "jupyter"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "tox"},
]
# Only what's needed for uv run mkdocs build
docs = [
    "griffe-warnings-deprecated",
    "jupyter-server",
    "jupyterlab-server",
    "jupyterlab-widgets",
    "jupytext",
    "jupyterlite",
    "jupyterlite-pyodide-kernel",
    "markdown-pycon",  # syntax highlighting for doctests
    "mike",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pandas",
    "pandas-stubs",
    "pymdown-extensions",
    {include-group = "jupyter"},
]
# Mirrors optional dependencies
jupyter = ["dyce[viz]", "ipywidgets"]
# Only what's needed for uv run pre-commit run --all-files --hook-stage pre-push
lint = [
    "beartype",
    "matplotlib_inline",
    "mypy",
    "pre-commit",
    "pre-commit-uv",
    "pyrefly",
    "pyright",
    "pytest",
    "ruff",
    "ty",
    {include-group = "docs"},
]
# Only what's needed for quickstart-local.sh
quickstart = [
    "uv",
    {include-group = "docs"},
]
# Only what's needed for uv run pytest --cov
test = [
    "beartype",
    "coverage[toml]",
    "pandas",
    "pytest-beartype",
    "pytest-cov",
    {include-group = "jupyter"},
    {include-group = "test-pypy"},
]
# Only what's needed for uv run pytest specifically with PyPy (via Tox)
test-pypy = [
    "griffe-warnings-deprecated",
    "ipdb",
    "pytest",
]
# Only what's needed for uv run tox [-e ...]
tox = [
    "tox",
    "tox-uv",
]

[tool.codespell]
# Suggested pronunciations. (See WBO guides in
# <https://en.wikipedia.org/wiki/Pronunciation_respelling_for_English#Traditional_respelling_systems>.)
# - Nd: ehn-DEE
# - countin: Shucks! Jes' lahk i'sez, pahdnah!
# - damange: duh-MAYNJ
ignore-words-list = "Nd,countin,damange"
skip = ["*.ipynb"]

[tool.coverage.run]
source = ["anydyce"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
files = ["anydyce", "docs", "helpers", "tests", "*.py"]
# exclude = """(?x)(
#     ^docs/assets/nb_.*\\.py$
# )"""
exclude_gitignore = true
python_version = "3.11"
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyrefly]
project-includes = ["anydyce", "docs", "helpers", "tests", "*.py"]
python-version = "3.11.0"
infer-with-first-use = false

[warnings]
unused-ignore = true

[tool.pyright]
include = ["anydyce", "docs", "helpers", "tests", "*.py"]
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = [
  "--doctest-glob=*.md",
  "--doctest-modules",
  "--durations=4",
  "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]
doctest_optionflags = [
  # See <https://docs.python.org/3/library/doctest.html#option-flags>
  "ELLIPSIS",
  "IGNORE_EXCEPTION_DETAIL",
  "NORMALIZE_WHITESPACE",
  # See also <https://docs.pytest.org/en/stable/how-to/doctest.html#using-doctest-options>
  "NUMBER",
]
testpaths = ["README.md", "anydyce", "docs", "helpers", "tests", "*.py"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"anydyce/magic.py" = [
  "T201",  # `print` is the Jupyter cell-output mechanism
]
"docs/assets/nb_*.py" = [
  # Allow co-mingled imports for snippets
  "E402",  # Module level import not at top of file
  # ruff is confused by jupytext comments
  "ERA001",  # Found commented-out code
  # Cells support `await` statements
  "F704",  # `await` statement outside of a function
  "PLE1142",  # `await` should be used within an async function
  # Useful for cell display
  "B018",   # Found useless expression
  "T201",  # `print` found (eglot-check)
  # Catch-all for things that are only ignored in these files
  "RUF100",  # Unused `noqa` directive ...
]
"docs/assets/plot_*.py" = [
  # Allow co-mingled imports for snippets
  "E402",  # Module level import not at top of file
  # Useful for cell display
  "B018",   # Found useless expression
  "T201",  # `print` found (eglot-check)
]
"docs/notebooks/*.ipynb" = [
  "E402",  # Module level import not at top of file
  # Useful for cell display
  "B018",   # Found useless expression
  "T201",  # `print` found (eglot-check)
]
"helpers/anydice-programs.py" = [
  "C901",  # `...` is too complex
  "T201",  # `print` found (eglot-check)
]

[tool.ruff.lint]
preview = true
ignore = [
  "CPY",
  "D",
  "DOC",
  "EM",
  "FIX",  # TODO(posita): run occasionally, or figure out how to make these warnings
  "PLC",
  "PLR",
  "COM812",  # Trailing comma missing
  "E501",  # Line too long (... > ...)
  "INP001",  # File ... is part of an implicit namespace package. Add an `__init__.py`.
  "N806",  # Variable ... in function should be lowercase
  "RET505",  # Unnecessary `else` after `return` statement
  "RET506",  # Unnecessary `else` after `raise` statement
  "RET507",  # Unnecessary `else` after `continue` statement
  "RUF002",  # Docstring contains ambiguous ...
  "RUF067",  # `__init__` module should only contain docstrings and re-exports
  "S101",  # Use of `assert` detected
  "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
  "TRY003",  # Avoid specifying long messages outside the exception class
]
select = [
  "ALL",
]

[tool.ty.src]
include = ["anydyce", "docs", "helpers", "tests", "*.py"]
exclude = ["docs/assets/nb_*.py"]

[tool.check_doctests]
# log_level = "DEBUG"

[tool.check_doctests.check]
checkers = [
  ["ty", "check"],
  ["pyrefly", "check", "--search-path", "."],
  ["pyright"],
  ["mypy"],
]
fail_fast = false
