# ======================================================================================
# Copyright and other protections apply. Please see the accompanying LICENSE file for
# rights and restrictions governing use of this software. All rights not expressly
# waived or licensed are reserved. If that file is missing or appears to be modified
# from its original, then please contact the author before viewing or using this
# software in any capacity.
# ======================================================================================

[metadata]  # --------------------------------------------------------------------------

name = anydyce
version = attr:anydyce._version.version
url = https://posita.github.io/anydyce/
author = Matt Bogosian
author_email = matt@bogosian.net
project_urls =
    Source Repository = https://github.com/posita/anydyce/
# From <https://pypi.python.org/pypi?%3Aaction=list_classifiers>
classifiers =
  Topic :: Education
  Topic :: Games/Entertainment
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Software Development :: Libraries :: Python Modules
  Typing :: Typed
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
license = MIT License
license_files = LICENSE
description = Visualization tools for dyce
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]  # ---------------------------------------------------------------------------

packages = anydyce
python_requires = >=3.8
install_requires =
  dyce>=0.5,<0.6
  ipywidgets~=7.7
  matplotlib~=3.5

[options.extras_require]  # ------------------------------------------------------------

dev =
  beartype>=0.10.4
  pre-commit
  tox
  versioningit~=2.0

[options.package_data]  # --------------------------------------------------------------

anydyce = py.typed

[tox:tox]  # ---------------------------------------------------------------------------

envlist = check, py310-lint{,-beartype}, py310{,-beartype}
skipsdist = true
skip_missing_interpreters = true

[gh-actions]  # ------------------------------------------------------------------------

python =
  3.8: py38-beartype
  3.9: py39-lint{,-beartype}, py39{,-beartype}
  3.10: py310-lint{,-beartype}, py310{,-beartype}
  3.11: py311-lint{,-beartype}, py311{,-beartype}
  pypy-3.8: pypy38-beartype
  pypy-3.9: pypy39-beartype

[testenv]  # ---------------------------------------------------------------------------

commands =
  debug: pytest {posargs}
  !debug: pytest --cov=anydyce --numprocesses {env:NUMBER_OF_PROCESSORS:auto} {posargs}
deps =
  --editable .
  beartype: beartype>=0.8,!=0.9.0
  pytest
  # Because ${HOME} is not passed, ~/.gitconfig is not read. To overcome this, port any
  # desired user-specific exclusion configuration to .git/config. E.G.:
  #
  #   [core]
  #   excludesfile = /home/username/.gitignore
  #
  # Alternatively, add entries directly to .git/info/exclude. See also mkdocs-exclude
  # below.
  pytest-gitignore
  !debug: pytest-cov
  !debug: pytest-xdist
passenv =
  PYTHONBREAKPOINT
setenv =
  PYTHONWARNINGS = {env:PYTHONWARNINGS:ignore}

[testenv:assets]  # --------------------------------------------------------------------

commands =
  make -C docs/assets -j {env:NUMBER_OF_PROCESSORS:6}
deps =
  --editable .
whitelist_externals =
  make

[testenv:check]  # ---------------------------------------------------------------------

commands =
  rm -frv site
  jupyter lite build
  mkdocs build --strict
  python -c 'from setuptools import setup ; setup()' bdist_wheel
  twine check dist/*
deps =
  --editable .
  jupyterlab_server
  jupyterlite>=0.1.0b9
  pkginfo
  mike
  # See <https://github.com/mkdocs/mkdocs/issues/2448>
  # See <https://github.com/mkdocstrings/mkdocstrings/issues/295>
  mkdocs!=1.2
  # See pytest-gitignore note above
  mkdocs-exclude
  mkdocs-macros-plugin
  mkdocs-material
  mkdocstrings[python]>=0.18
  twine
  versioningit~=2.0
whitelist_externals =
  rm

[testenv:jupyter]  # -------------------------------------------------------------------

commands =
  jupyter-lab {posargs}
deps =
  --editable .
  jupyterlab

[testenv:py{38,39,310,311}-lint{,-beartype}]  # ----------------------------------------

commands =
  pre-commit run --all-files --show-diff-on-failure
  beartype: mypy --config-file={toxinidir}/pyproject.toml --warn-unused-ignores .
  !beartype: mypy --config-file={toxinidir}/pyproject.toml .
  {toxinidir}/helpers/mypy-doctests.py -a=--config-file={toxinidir}/pyproject.toml .
deps =
  --editable .
  beartype: beartype>=0.8,!=0.9.0
  mypy>=0.931
  pre-commit

[flake8]  # ----------------------------------------------------------------------------

# See:
# * <https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes>
# * <https://flake8.readthedocs.io/en/latest/user/error-codes.html>
ignore =
  E203,  # whitespace before ':'
  E501,  # line too long (... > ... characters)
  W503,  # line break occurred before a binary operator
